--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,3 +1,4 @@
 appURL=https://dsportalapp.herokuapp.com/
 browser=edge
-login.url=https://dsportalapp.herokuapp.com/login
+login.url=https://dsportalapp.herokuapp.com/login/
+array.url=https://dsportalapp.herokuapp.com/array/
