--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>extentreports-testng-adapter</artifactId>
             <version>1.0.7</version>
         </dependency>
+        <!-- Source: https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+       <dependency>
+          <groupId>io.qameta.allure</groupId>
+          <artifactId>allure-testng</artifactId>
+          <version>2.29.1</version>
+       </dependency>
 
     </dependencies>
 </project>
