modified listerner class and testng.xml

--- a/src/test/resources/chaintest.properties
+++ b/src/test/resources/chaintest.properties
@@ -7,7 +7,7 @@ chaintest.generator.simple.document-title=ChainTestReport
 chaintest.generator.simple.class-name=com.aventstack.chaintest.generator.ChainTestSimpleGenerator
 chaintest.generator.simple.output-file=Reports/ChainTestReport.html
 chaintest.generator.simple.offline=false
-chaintest.generator.simple.dark-theme=true
+chaintest.generator.simple.dark-theme=false
 chaintest.generator.simple.datetime-format=yyyy-MM-dd hh:mm:ss a
 chaintest.generator.simple.js=
 chaintest.generator.simple.css=
